--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "3.15.2",
     "@react-spring/web": "^9.4.5",
     "@tailwindcss/line-clamp": "^0.4.0",
@@ -36,8 +37,10 @@
     "ky-universal": "^0.10.1",
     "mailgun.js": "^7.0.2",
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
     "next-pwa": "^5.5.4",
     "next-seo": "^5.4.0",
+    "nodemailer": "^6.7.5",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
