Add email magic link auth

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,10 @@ MAILCHIMP_API_KEY=
 MAILCHIMP_AUDIENCE_ID=
 MAILCHIMP_SERVER_ID=us20
 
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_FROM=
+
 NEXT_TELEMETRY_DISABLED=1
