Adapt Dockerfile to use prisma

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,12 @@ MAILCHIMP_API_KEY=
 MAILCHIMP_AUDIENCE_ID=
 MAILCHIMP_SERVER_ID=us20
 
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_FROM=
+
+DATABASE_URL="postgresql://vegan_hacktivists:localpass@localhost:5432/vegan_hacktivists?schema=public"
+
 NEXT_TELEMETRY_DISABLED=1
