Add database URL to .env.example

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,6 @@ EMAIL_SERVER_HOST=
 EMAIL_SERVER_PORT=
 EMAIL_FROM=
 
+DATABASE_URL="postgresql://vegan_hacktivists:localpass@localhost:5432/vegan_hacktivists?schema=public"
+
 NEXT_TELEMETRY_DISABLED=1
