--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,6 +91,7 @@ jobs:
             --env DATABASE_URL=$DATABASE_URL \
             --env EMAIL_SERVER_URL=$EMAIL_SERVER_URL \
             --env NEXTAUTH_SECRET=$NEXTAUTH_SECRET \
+            --env NEXTAUTH_URL="https://veganhacktivists.org" \
             --label traefik.enable=true \
             --label traefik.docker.network=traefik-public \
             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
