--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "prepare": "husky install",
+    "preinstall": "pnpm dlx only-allow pnpm",
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
@@ -68,12 +69,12 @@
     "@testing-library/react": "^13.3.0",
     "@types/crypto-js": "^4.1.1",
     "@types/mailchimp__mailchimp_marketing": "^3.0.5",
+    "@types/node": "^18.0.5",
     "@types/react": "18.0.14",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.3",
     "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^15.5.2",
-    "@types/tailwindcss": "^3.0.10",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.7",
