--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
-    "@prisma/client": "4.6.1",
+    "@prisma/client": "4.16.2",
     "@react-spring/web": "^9.5.5",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.16.1",
@@ -118,7 +118,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
-    "prisma": "^4.6.1",
+    "prisma": "4.16.2",
     "tailwind-scrollbar": "^3.0.4",
     "ts-node": "^10.9.1",
     "typescript": "4.8.2"
