--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "next start",
     "lint": "next lint --dir . --report-unused-disable-directives warn",
     "test": "jest --watch",
+    "typecheck": "tsc --noEmit",
     "contentful-typescript-codegen": "export $(grep -v '^#' .env | xargs -d '\n') && contentful-typescript-codegen --output src/types/generated/contentful.d.ts"
   },
   "dependencies": {
@@ -101,13 +102,13 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^15.5.5",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.23.0",
     "eslint-config-next": "13.5.6",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.9.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -118,10 +119,10 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
-    "prisma": "4.16.2",
+    "prisma": "5.6.0",
     "tailwind-scrollbar": "^3.0.4",
     "ts-node": "^10.9.1",
-    "typescript": "4.8.2"
+    "typescript": "5.3.2"
   },
   "optionalDependencies": {
     "contentful-management": "^10.20.1",
