--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@prisma/client": "5.6.0",
     "@react-spring/web": "^9.5.5",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tanstack/react-query": "^4.16.1",
-    "@trpc/client": "10.0.0-proxy-alpha.74",
-    "@trpc/next": "10.0.0-proxy-alpha.74",
-    "@trpc/react": "10.0.0-proxy-alpha.74",
-    "@trpc/server": "10.0.0-proxy-alpha.74",
+    "@tanstack/react-query": "^4.18.0",
+    "@trpc/client": "10.44.1",
+    "@trpc/next": "10.44.1",
+    "@trpc/react-query": "10.44.1",
+    "@trpc/server": "10.44.1",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
