--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "@nivo/line": "^0.80.0",
     "@prisma/client": "5.6.0",
     "@react-spring/web": "^9.5.5",
+    "@refinedev/core": "^4.46.0",
+    "@refinedev/inferencer": "^4.5.15",
+    "@refinedev/nextjs-router": "^5.5.4",
+    "@refinedev/simple-rest": "^5.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "10.44.1",
