--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@nivo/line": "^0.80.0",
     "@prisma/client": "5.6.0",
     "@react-spring/web": "^9.5.5",
-    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "10.44.1",
     "@trpc/next": "10.44.1",
@@ -67,6 +66,7 @@
     "react-hook-form": "^7.39.4",
     "react-modal": "^3.16.1",
     "react-qr-code": "^2.0.8",
+    "react-responsive": "^9.0.2",
     "react-select": "^5.6.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.1",
@@ -76,7 +76,7 @@
     "sharp": "^0.31.2",
     "snoowrap": "^1.23.0",
     "superjson": "^1.11.0",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.4.0",
     "zod": "^3.19.1",
     "zustand": "4.1.1"
   },
@@ -118,7 +118,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "prisma": "5.6.0",
     "tailwind-scrollbar": "^3.0.4",
     "ts-node": "^10.9.1",
