--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@contentful/rich-text-plain-text-renderer": "^15.12.1",
     "@contentful/rich-text-react-renderer": "^15.12.1",
     "@floating-ui/react-dom-interactions": "^0.9.3",
+    "@fontsource/bitter": "^5.0.18",
+    "@fontsource/pt-sans": "^5.0.13",
+    "@fontsource/rajdhani": "^5.0.13",
     "@formatjs/cli-lib": "^6.3.6",
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
