--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
-    "@prisma/client": "5.6.0",
+    "@prisma/client": "5.17.0",
     "@react-spring/web": "^9.5.5",
-    "@tanstack/react-query": "^5.25.0",
-    "@trpc/client": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-query": "^5.51.15",
+    "@trpc/client": "11.0.0-rc.467",
+    "@trpc/react-query": "11.0.0-rc.467",
+    "@trpc/server": "11.0.0-rc.467",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
@@ -131,11 +131,11 @@
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prisma": "5.6.0",
+    "prettier": "^3.3.3",
+    "prisma": "5.17.0",
     "tailwind-scrollbar": "^3.0.4",
     "ts-node": "^10.9.1",
-    "typescript": "5.5.2"
+    "typescript": "5.5.4"
   },
   "optionalDependencies": {
     "contentful-management": "^10.20.1",
