--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "contentful-typescript-codegen": "^3.2.3"
   },
   "engines": {
-    "pnpm": ">=8.0.0"
-  }
+    "pnpm": ">=9.11.0"
+  },
+  "packageManager": "pnpm@9.11.0+sha256.1c0e33f70e5df9eede84a357bdfa0b1f9dba6e58194628d48a1055756f553754"
 }
