--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,10 +33,10 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Use Node.js 20
-        uses: actions/setup-node@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version-file: .nvmrc
 
       - uses: actions/checkout@v4
 
